# The-Tower-Optimizer

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_ICONS.txt  Dockerfile  LICENSE  NOTICE.md  README.md  RELEASE_NOTES_preview6.md  SECURITY.md  app.py  docker-compose.yml  install_v2_preview.ps1  publish_to_github.ps1  pyproject.toml  requirements.txt  run_engine_health.ps1  run_optimizer.ps1  run_public_checks.ps1  run_smoke_test.ps1  run_v2_preview_validation.ps1
.github/: pull_request_template.md
.streamlit/: config.toml
data/: README.md
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  ASSETS.md  DATA_SOURCES.md  DOCKER.md  GETTING_STARTED.md  PRIVACY.md  RELEASES.md  ROADMAP.md  VERIFICATION_LEVELS.md  WINDOWS_EXE.md
sample_data/: README.md  example_profile.json
scripts/: build_source_release.py  build_windows_exe.ps1  windows_launcher.py
tests/: test_battle_batch_import.py  test_battle_parser.py  test_build_archetypes.py  test_build_beast_mode.py  test_calculation_help.py  test_engines_with_sample.py  test_game_data.py  test_icon_manager.py  test_module_substats.py  test_playbook_export.py  test_profile_session.py  test_public_package.py  test_recommendation_explanations.py  test_save_parser.py
tools/: build_save_catalogs.py  build_towersmith_icon_paths.py  engine_health.py  fill_effective_paths_from_save.py  generate_module_icons.py  probe_player_save.py  public_release_audit.py  smoke_test.py  test_windows_launcher.py  v2_preview_validation.py  validate_source_workbooks.py
(+63 files in other folders)
